# aws-masquerade

./: .gitignore  CREDITS  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  main.yml
src/: fs.rs  io.rs  main.rs  path.rs  totp.rs  variables.rs
src/base/: cmd.rs  mod.rs  model.rs
src/cmd/: add.rs  assume.rs  config_path.rs  configure.rs  edit.rs  list.rs  mod.rs  remove.rs  source.rs  target.rs  test.rs  validate.rs  view.rs
src/cmd/configure/: mod.rs
src/cmd/source/: list.rs  mod.rs  show.rs
src/lib/: cmd_base.rs  dirs.rs  fs.rs  io.rs  mod.rs  totp.rs
src/models/: mod.rs
src/models/configuration/: mod.rs  v0.rs  v1.rs
