[package]
name = "aws-masquerade"
description = "AWS Assume Role CLI Tool"
version = "0.3.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

repository = "https://github.com/sinofseven/aws-masquerade"
license = "MIT"
readme = "README.md"
category = ["command-line-utilities"]
keywords = ["aws", "assume_role", "credentials"]

[[bin]]
name = "aws-masquerade"
path = "src/main.rs"
[dependencies]
clap = {version = "3.2.22", features=["cargo"]}
data-encoding = "2.3.2"
