[package]
name = "aws-masquerade"
description = "AWS Assume Role CLI Tool"
version = "0.3.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

repository = "https://github.com/sinofseven/aws-masquerade"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["aws", "assume_role", "credentials"]

[[bin]]
name = "aws-masquerade"
path = "src/main.rs"
[dependencies]
clap = {version = "4.0.4", features=["cargo"]}
data-encoding = "2.3.2"
serde = {version = "1.0.145", features=["derive"]}
dirs = "4.0.0"
serde_json = "1.0.85"
toml = "0.5.9"
colored = "2.0.0"
