[package]
name = "aws-masquerade"
description = "AWS Assume Role CLI Tool"
version = "0.3.1"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

repository = "https://github.com/sinofseven/aws-masquerade"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["aws", "assume_role", "credentials"]

[[bin]]
name = "aws-masquerade"
path = "src/main.rs"

[dependencies]
clap = {version = "4.0.4", features=["cargo"]}
data-encoding = "2.3.2"
serde = {version = "1.0.145", features=["derive"]}
dirs = "4.0.0"
serde_json = "1.0.85"
toml = "0.5.9"
colored = "2.0.0"
tokio = {version = "1.21.2", features=["full"]}
aws-config = "0.49.0"
aws-types = "0.49.0"
aws-sdk-sts = "0.19.0"
ring = "0.16.20"
uuid = {version = "1.2.1", features=["v4"]}
serde_ini = "0.2.0"
chrono = "0.4.22"
